OH Queue route (#50)
* working route for ohQueue

* changed controller

* fixed lint

* added api/oh-queue.js

* updated openapi folder for oh queue to resolve errors

* working front end

* fixed lint

* working front end and passing tests

* fixed lint
